test/classes/initializers/generics/param-field-default-value-non-param-field.good
param-field-default-value-non-param-field.chpl:4: In initializer:
param-field-default-value-non-param-field.chpl:4: error: Initializing parameter 'p' to value not known at compile time
