test/classes/initializers/generics/param-field-default-value-non-param-field.chpl
class C {
  var notaparam = 42;
  param p = notaparam;
  proc init() { }
}

var c = new owned C();
writeln(c);
